Issues on nav, add ul element for anchors. Disney plus logo add vertical align middle

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,10 @@ figure {
   text-transform: uppercase;
 }
 
+.promo img {
+  vertical-align: middle;
+}
+
 .promo__title {
   display: none;
 }
@@ -265,16 +269,28 @@ figure {
     grid-area: nav;
     display: flex;
     margin: 0 auto;
+    height: 100%;
+  }
+
+  .nav ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: inherit;
+  }
+
+  .nav ul li {
+    display: flex;
+    height: inherit;
+    padding: 0 18px;
   }
 
   .nav a {
     display: inherit;
     height: inherit;
     align-items: center;
-    padding: 0 18px;
     font-weight: 800;
     letter-spacing: 1px;
-    border-bottom: 2px solid transparent;
     text-transform: uppercase;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
@@ -282,7 +298,7 @@ figure {
 
   .nav a:hover {
     color: var(--white);
-    border-bottom: 2px solid var(--red);
+    box-shadow: 0 -2px 0 0 var(--red) inset;
   }
 
   .nav:hover a:not(:hover) {
